--- a/04-card/index.html
+++ b/04-card/index.html
@@ -17,5 +17,42 @@
 		<title>CSS</title>
 	</head>
 
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="box">
+				<div class="picture">
+					<img src="phone1.jpg">
+				</div>
+				<div class="circlebox">
+					<div class="circle" style="background-color: azure;"></div>
+					<div class="circle" style="background-color: rebeccapurple;"></div>
+					<div class="circle" style="background-color: pink;"></div>
+				</div>
+				<h2>PHONE1</h2>
+				<p>สุดยอดมือถือ</p>
+				<h3>เริ่มต้นไม่แพง</h3>
+				<div class="click">
+					<button>ดูเพิ่มเติม</button>
+					<a href="https://www.apple.com/th/">ซื้อ></a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="picture">
+					<img src="phone2.jpg">
+				</div>
+				<div class="circlebox">
+					<div class="circle" style="background-color: azure;"></div>
+					<div class="circle" style="background-color: rebeccapurple;"></div>
+					<div class="circle" style="background-color: pink;"></div>
+				</div>
+				<h2>PHONE2</h2>
+				<p>สุดยอดมือถือ2</p>
+				<h3>สุดยอดกว่าอันข้างๆ</h3>
+				<div class="click">
+					<button>ดูเพิ่มเติม</button>
+					<a href="https://www.apple.com/th/">ซื้อ></a>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
